deploy/payment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deploy","name":"payment-db"}]'
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
    spec: 
      containers:
      - name: payment
        image: payment:version
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
