deploy/payment/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: payment
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: payment
    weight: 100
  wildcardPolicy: None
